tests/gabc-dump/should-fail/unclosed-over-ledger.gabc
name: unclosed over-staff ledger line;
%%
(c4) g(g) h(h[oll:2mm{2mm])
